# Stellar-Explorer

./: CMakeLists.txt  README.md  build.sh
src/: breadcrumbs.cpp  breadcrumbs.h  configdialog.cpp  configdialog.h  fileopworker.cpp  fileopworker.h  filetab.cpp  filetab.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.cpp  utils.h
